# academic-manuscript-workflow

./: .gitignore  CLAUDE.md  Makefile  README.md  manuscript.md  manuscript.template.md  pyproject.toml  reference.bib  reference.template.bib
scripts/: validate_references.py
