[project]
name = "reference-validator"
version = "0.1.0"
description = "Validate DOIs and URLs from BibTeX references"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
    "urllib3>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]